app/globals.css
@import "tailwindcss";


:root {
  --background: #101922;
  --foreground: #fff;
  --primary:#137fec;
  /* --secondary-dark:#115284;
  --secondary-light:#33A6DB;
  --accent: #008DFA; */
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  /* --color-secondary-dark: var(--secondary-dark);
  --color-secondary-light: var(--secondary-light);
  --color-accent:var(--accent); */
 
  --font-sans: var(--font-bricolage);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #101922;
    --foreground: #fff;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  
}

